# phex

./: .gitignore  api.dockerfile  docker-compose.api.dev.yml  docker-compose.api.yml  docker-compose.data.yml  docker-compose.gateway.dev.yml  docker-compose.gateway.yml  docker-compose.identity.yml  docker-compose.yml  init-letsencrypt.sh  phex.ca.pem  project.code-workspace  requirements.txt
appliance/api/: .env.development  .flake8  Dockerfile  Dockerfile.prod  Pipfile  main.py  pyproject.toml  requests.http
appliance/api/phex/: __init__.py  authentication.py  configuration.py  logging.py  mongodb.py
appliance/api/phex/middleware/: tracing.py
appliance/api/phex/oidc/: __init__.py  _routes.py  access.py  authenticationresult.py  consent.py  metadata.py  openidconnect.py  openidconnectclient.py  openidconnectconfiguration.py  signinrequest.py  utils.py
appliance/api/phex/pkg/: __init__.py  controller.py  routes.py  schema.py
appliance/api/phex/usermanagement/: __init__.py  routes.py
appliance/api/phexapi/: auth.py  protect.py
appliance/api/phexapi/exhibitions/: __init__.py  controller.py  models.py  routes.py  schema.py
appliance/api/phexapi/images/: __init__.py  controller.py  models.py  routes.py  schema.py
appliance/api/phexapi/posts/: __init__.py  controller.py  facade.py  models.py  routes.py  schema.py
appliance/api/phexapi/users/: __init__.py  controller.py  models.py  routes.py  schema.py
appliance/client/: Dockerfile  make-icon.sh  package-lock.json  package.json
appliance/database/: Dockerfile
hooks/: pre-commit
(+74 files in other folders)
